...
                        }).toList(),
                  );
                },
              ),
              const SizedBox(height: 24),
              PremiumButton(
                text: 'Save Note',
                onPressed: () {
                  if (titleController.text.isNotEmpty) {
                    context.read<DatabaseBloc>().add(
                      DatabaseAddNote(
                        title: titleController.text,
                        content: contentController.text,
...
